--- a/.env.template
+++ b/.env.template
@@ -5,4 +5,4 @@ NATS_SERVERS="nats://localhost:4222"
 
 DATABASE_URL=mongodb+srv://****:****@cluster*******.mongodb.net/AuthDB
 
-JWT_SECRET=EstoDebeS3rUnStringSeguro
+JWT_SECRET=****
